# DD4ML

./: .gitignore  README.md  compute_node_hours.py  pyproject.toml  rename.py  requirements.txt  setup.py
cluster_scripts/: scalability_shakespeare.job  scalability_shakespeare.sh  scalability_shakespeare_apts.job  scalability_shakespeare_apts.sh  scalability_shakespeare_parsgd.job  scalability_shakespeare_parsgd.sh  strong_scalability.sh
datasets/: char_dataset.py  tinyshakespeare.py
mingpt/: model.py  trust_region.py
plotting/: __init__.py  analysis.py  box_whisker_plots.py  correct_metric.py  dataset_plots.py  make_scaling_tables.py  sgd_lr_tables.py  time_series.py  time_series_grid.py  time_series_grid_presentation.py  utils.py
projects/chargpt/: chargpt.py
saved_networks/chargpt/: args.txt  config.json
saved_networks/cifar10/parsgd/: args.txt  config.json
saved_networks/cifar10/parsgd_pmw/: args.txt  config.json
saved_networks/tinyshakespeare/apts_pmw/: args.txt  config.json
saved_networks/tshakes/: args.txt  config.json
src/: base_trainer.py  dataloaders.py  plot_transf_results.py  trainer.py  utils.py
src/DD4ML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/datasets/: base_dataset.py  char_dataset.py  cifar10.py  mnist.py  tinyshakespeare.py
src/dd4ml/: dataloaders.py  plot_results.py  trainer.py  utils.py
src/dd4ml/datasets/: __init__.py  base_dataset.py  char_dataset.py  cifar10.py  deeponet_sine.py  mnist.py  pinn_allencahn.py  pinn_allencahn_time.py  pinn_poisson.py  pinn_poisson2d.py  pinn_poisson3d.py  tinyshakespeare.py
src/dd4ml/models/: base_model.py
src/dd4ml/optimizers/: apts.py  apts_ag.py  apts_base.py  apts_d.py  apts_fp.py  apts_ip.py  apts_p.py  apts_pinn.py  asntr.py  hessian_approx.py  lsr1.py  lssr1_tr.py  lssr1_tr_first_draft.py  tr.py  tradam.py  trust_region.py  trust_region_ema.py  trust_region_first_order.py  trust_region_legacy_code.py  trust_region_second_order.py  utils.py
src/dd4ml/pmw/: base_pmw_model.py  data_and_weight_parallelized_subdomain.py  dataloaders.py  model_handler.py  parallelized_model.py  sharded_layer.py  weight_parallelized_model.py  weight_parallelized_subdomain.py  weight_parallelized_tensor.py
src/dd4ml/solvers/: obs.py
src/dd4ml/utility/: __init__.py  apts_utils.py  base_pinn_loss.py  config.py  deeponet_loss.py  dist_utils.py  factory.py  mingpt_utils.py  ml_utils.py  model_factory.py  optimizer_utils.py  pinn_allencahn_loss.py  pinn_allencahn_time_loss.py  pinn_poisson2d_loss.py  pinn_poisson3d_loss.py  pinn_poisson_loss.py  trainer_setup.py  utils.py
src/llms_datasets/: tiny_shakespeare.py
src/models/: base_model.py  nanoGPT.py  standard_model.py
src/optimizers/: APTS.py  apts.py
src/pmw/: base_model.py  base_pmw_model.py  data_and_weight_parallelized_subdomain.py  dataloaders.py  model_handler.py  parallelized_model.py  sharded_layer.py  utils.py  weight_parallelized_model.py  weight_parallelized_subdomain.py  weight_parallelized_tensor.py
src/utility/: dist_utils.py  ml_utils.py  wandb_utils.py
tests/: APTS_shakespeare.py  README.md  analysis_helper.py  analyze_hyperparam_results.py  analyze_hyperparam_results_cnn.py  analyze_hyperparam_results_ffnn.py  analyze_hyperparam_results_gpt.py  analyze_hyperparam_results_pinns.py  analyze_hyperparam_results_resnet.py  apts.sh  apts_daintalps.job  apts_rosa.job  asntr.py  cnn_dd.py  compute_averages.py  consistency_shakespeare.py  consolidate_heatmaps.py  daintalps.job  dummy.py  example.job  example.py  experiment_tracker.py  hyperparameterization_test.py  hyperparameterization_test_cnn.py  hyperparameterization_test_ffnn.py  hyperparameterization_test_gpt.py  hyperparameterization_test_pinns.py  hyperparameterization_test_resnet.py  job_template.job  job_template_daintalps.job  job_template_rosa.job  readme.md  rosa.job  run_config_file.job  run_config_file.py  run_example.job  scalability_shakespeare.py  scalability_shakespeare_apts.py  scalability_shakespeare_parsgd.py  scalability_shakespeare_sgd.py  (+30 more)
tests/apts/: tinyshakespeare.py  tshakes.py
tests/chargpt/: chargpt.py
tests/cifar10/: parsgd.py  parsgd_pmw.py
tests/config_files/: config_apts.yaml  config_apts_d.yaml  config_apts_d_nst_1_nsd_2_nrpsd_1.yaml  config_apts_d_nst_1_nsd_4_nrpsd_1.yaml  config_apts_d_nst_1_nsd_8_nrpsd_1.yaml  config_apts_d_nst_2_nsd_1_nrpsd_1.yaml  config_apts_d_nst_4_nsd_1_nrpsd_1.yaml  config_apts_d_nst_8_nsd_1_nrpsd_1.yaml  config_apts_ip.yaml  config_apts_nst_2_nsd_1_nrpsd_1.yaml  config_apts_nst_4_nsd_1_nrpsd_1.yaml  config_apts_nst_8_nsd_1_nrpsd_1.yaml  config_apts_p.yaml  config_apts_pinn.yaml  config_asntr.yaml  config_hyperparam_apts_d_w8_nl2.yaml  config_hyperparam_apts_d_w8_nl4.yaml  config_hyperparam_apts_d_w8_nl8.yaml  config_hyperparam_sgd_w8_nl2.yaml  config_hyperparam_sgd_w8_nl4.yaml  config_hyperparam_sgd_w8_nl8.yaml  config_lssr1_tr.yaml  config_sgd.yaml  config_tr.yaml
tests/examples/: job_template_daintalps.job  job_template_rosa.job  pinn_poisson.py  pinn_poisson2d.py  pinn_poisson3d.py
tests/imagenet/: fft_adam.py
tests/job_configs/: allencahn1d.conf  allencahn1d_sgd.conf  cifar10.conf  cifar10_sgd.conf  deeponet.conf  mnist.conf  mnist_sgd.conf  poisson1d.conf  poisson1d_sgd.conf  poisson2d.conf  poisson2d_sgd.conf  poisson3d_sgd.conf  tinyshakespeare.conf  tinyshakespeare_sgd.conf
tests/log_files/: example.err  example.out
tests/mnist/: parsgd.py  parsgd_pmw.py  parsgd_standard_pytorch.py
tests/time_comparison/: time_comparison.py
tests/tinyshakespeare/: apts_pmw.py  tshakes.py
tests/wandb/: compute_averages.py  config_apts.yaml  config_sgd.yaml  run_config_file.py  sweep_id.txt
tests/wandb_sweep/: compute_averages.py  hyperparam_sweep.py  sweep_config.yaml
(+44 files in other folders)
