[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DD4ML"
version = "0.1.0"
description = "A PyTorch-based project for domain decomposition methods for machine learning."
authors = [
    { name = "Samuel Adolfo Cruz Alegría", email = "cruzas@usi.ch" },
    { name = "Ken Trotti", email = "ken.trotti@usi.ch" },
    { name = "Marc Salvadó Benasco", email = "marc.salvado@usi.ch" },
    { name = "Shega Likaj", email = "shega.likaj@usi.ch" },
    { name = "Bindi Capriqi", email = "bindi.capriqi@kaust.edu.sa" },
    { name = "Armando Maria Monforte", email = "armandomaria.monforte01@universitadipavia.it" },
    { name = "Prof. Dr. Rolf Krause", email = "rolf.krause@kaust.edu.sa" },
]
license = { file = "LICENSE" }
dependencies = [
    "absl-py==0.12.0",
    "alabaster==0.7.12",
    "astor==0.8.1",
    "astunparse==1.6.3",
    "babel==2.9.0",
    "boto3==1.21.32",
    "botocore==1.24.32",
    "cachetools==4.2.4",
    "certifi==2021.5.30",
    "cffi==1.14.5",
    "charset-normalizer==2.0.4",
    "click==8.0.3",
    "cloudpickle==1.6.0",
    "colorama==0.4.4",
    "cryptography==3.4.4",
    "cycler==0.10.0",
    "cytoolz==0.11.0",
    "dask-core==2021.3.0",
    "dataclasses==0.7",
    "decorator==5.0.7",
    "docutils==0.17.1",
    "freetype==2.10.4",
    "gast==0.3.3",
    "google-auth==2.22.0",
    "google-auth-oauthlib==0.4.6",
    "google-pasta==0.2.0",
    "grpcio==1.30.0",
    "h5py==2.10.0",
    "idna==2.10",
    "imageio==2.9.0",
    "imagesize==1.2.0",
    "importlib-metadata==3.10.1",
    "jinja2==2.11.3",
    "jmespath==0.10.0",
    "joblib==1.0.1",
    "keras-applications==1.0.8",
    "keras-preprocessing==1.1.2",
    "kiwisolver==1.3.0",
    "lz4-c==1.9.2",
    "markdown==3.3.4",
    "markupsafe==1.1.1",
    "matplotlib==3.3.2",
    "mkl-service==2.3.0",
    "mkl-fft==1.2.0",
    "mkl-random==1.1.1",
    "networkx==2.5",
    "numpy==1.16.4",
    "numpydoc==0.9.1",
    "oauthlib==3.2.2",
    "olefile==0.46",
    "opt-einsum==3.3.0",
    "packaging==20.9",
    "pandas==1.1.5",
    "pillow==8.1.0",
    "plotly==5.1.0",
    "protobuf==3.12.3",
    "pyasn1==0.5.1",
    "pyasn1-modules==0.3.0",
    "pycparser==2.20",
    "pydoe==0.3.8",
    "pygments==2.8.1",
    "pyopenssl==20.0.1",
    "pyparsing==2.4.7",
    "pypdf2==3.0.1",
    "pysocks==1.7.1",
    "python-dateutil==2.8.1",
    "pytz==2021.1",
    "pywavelets==1.1.1",
    "pyyaml==5.4.1",
    "regex==2021.8.3",
    "requests==2.27.1",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "s3transfer==0.5.0",
    "scikit-image==0.15.0",
    "scikit-learn==0.21.2",
    "sentencepiece==0.2.0",
    "setuptools==51.1.2",
    "six==1.15.0",
    "snowballstemmer==2.1.0",
    "sphinx==3.5.3",
    "sphinxcontrib-applehelp==1.0.2",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-htmlhelp==1.0.3",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==1.1.4",
    "tabulate==0.8.9",
    "tenacity==8.0.1",
    "tensorboard==2.10.1",
    "tensorboard-data-server==0.6.1",
    "tensorboard-plugin-wit==1.8.1",
    "tensorflow==1.14.0",
    "tensorflow-estimator==2.3.0",
    "termcolor==1.1.0",
    "texttable==1.6.4",
    "threadpoolctl==2.1.0",
    "toolz==0.11.1",
    "torchaudio==0.7.2",
    "torchtext==0.8.1",
    "torchvision==0.8.2",
    "tornado==6.1",
    "tqdm==4.61.2",
    "transformers==2.1.1",
    "typing_extensions==3.7.4.3",
    "urllib3==1.26.4",
    "werkzeug==1.0.1",
    "wrapt==1.12.1",
    "zipp==3.4.1"
]
