[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DD4ML"
version = "0.1.0"
description = "A PyTorch-based project for domain decomposition methods for machine learning."
authors = [
    { name = "Samuel Adolfo Cruz Alegría", email = "cruzas@usi.ch" },
    { name = "Ken Trotti", email = "ken.trotti@usi.ch" },
    { name = "Marc Salvadó Benasco", email = "marc.salvado@usi.ch" },
    { name = "Shega Likaj", email = "shega.likaj@usi.ch" },
    { name = "Bindi Capriqi", email = "bindi.capriqi@kaust.edu.sa" },
    { name = "Armando Maria Monforte", email = "armandomaria.monforte01@universitadipavia.it" },
    { name = "Prof. Dr. Rolf Krause", email = "rolf.krause@kaust.edu.sa" },
]
license = { file = "LICENSE" }
dependencies = [
    "torch>=2.5.1",  # Default CPU version
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "matplotlib>=3.10.0",
    "numpy>=1.24.4",
    "pandas>=1.5.3",
    "scipy>=1.10.1",
    "requests>=2.32.3",
    "wandb>=0.19.6",
    "pyyaml>=6.0.1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]